--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,7 +17,7 @@
 	"content_scripts": [
 		{
 			"matches": ["https://www.studenti.unipi.it/auth/studente/Libretto/*"],
-			"js": ["scripts/almaLaureaData.js", "scripts/defaultSettings.js", "scripts/dependencies.js", "scripts/alice.js"],
+			"js": ["almaLaureaData.js", "defaultSettings.js", "dependencies.js", "alice.js"],
 			"css": ["styles.css"]
 		}
 	]
